# Textsnippets-Linux

./: CMakeLists.txt  Dockerfile.amd64  README.md  build-debs.sh
build-amd64/: textsnippets_1.0.0_amd64.deb
build-arm64/: CPackConfig.cmake  CPackSourceConfig.cmake
build-arm64/_CPack_Packages/Linux/DEB/: textsnippets_1.0.0_arm64.deb
build-arm64/_CPack_Packages/Linux/DEB/textsnippets_1.0.0_arm64/: control  md5sums
build-arm64/_CPack_Packages/Linux/DEB/textsnippets_1.0.0_arm64/etc/xdg/autostart/: textsnippets-autostart.desktop
build-arm64/_CPack_Packages/Linux/DEB/textsnippets_1.0.0_arm64/usr/share/applications/: textsnippets.desktop
cmake/: toolchain-amd64.cmake
src/: clipboard.cpp  clipboard.h  i18n.cpp  i18n.h  main.cpp  manager_dialog.cpp  manager_dialog.h  snippet_store.cpp  snippet_store.h  tray.cpp  tray.h
